--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: mypythondockerrepo
-        image: agunu2025.azurecr.io/eagunuworld/azure-container-repo:#{Build.BuildId}#
+        image: agunu2025.azurecr.io/eagunuworld/azure-container-repo
+        imagePullPolicy: always
         ports:
         - containerPort: 5000
 # service type loadbalancer       
