--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mypythondockerrepo
-        image: eagunuzone.azurecr.io/eagunuworld/azure-container-repo
+        image: eagunuzone.azurecr.io/eagunu-python
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
